# antislopfactory

./: .gitignore  .gitmodules  README.md  db.py  event.py  main.py  openapi.yaml  plot.py  proxy.py  pyproject.toml  test_api.py
classifier/: train_classifier.py
coding_agent/: __init__.py  __main__.py  agent.py  client.py  openapi.yaml  tools.py
data/: safety_classifier.json  safety_classifier.npz
toy_frontend/: index.html
util/: classifier.py  embed.py  grounding.py  jailbreak_classifier.py  tool_classifier.py
