[project]
name = "antislopfactory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "cerebras-cloud-sdk>=1.67.0",
    "datasets>=4.5.0",
    "exa-py>=2.4.0",
    "fastapi[standard]>=0.129.0",
    "googlesearch-python>=1.3.0",
    "httpx>=0.27.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]
